# DESKTOP

./: BASELINECONTEXT.md  README.md
BOOKSHELVES/: (R)evolution (Phoenix Horizon Book 1)_B00OM9OKEC.kfx  2 B R 0 2 B_B004TRFNIE.kfx  A Book of Ghosts_B005CDXN5O.kfx  A Christmas Carol (AmazonClassics Edition)_B071ZKZBWR.kfx  A Drop of Midnight_ A Memoir_B07T31HXK7.kfx  A Home for Leo_B0786G2WVG.azw3  A Journal of the Plague Year, written by a citizen who continued all the while in London_B0084B57VO.kfx  A Journey to the Centre of the Earth_B002RKRMSY.kfx  A Man_B07XKYTD57.kfx  A Modern Utopia_B004TS8GP0.kfx  A Princess of Mars_B0084BMGJU.kfx  A River in Darkness_ One Man's Escape from North Korea_B06XKRKFZL.kfx  A Short History of Greek Philosophy_B0082X9V8Y.kfx  A Single Swallow_B07VDFNJLZ.kfx  A Tale of Two Cities_B004EHZXVQ.kfx  According to Plan_ The Unfolding Revelation of God in the Bible_B00CWB7FV2.azw1  Allegiant (Divergent Trilogy, Book 3)_B00BD99JMW.kfx  Along the Tapajós_B07MR22CRD.azw3  American Sniper (Enhanced Edition)_ The Autobiography of the Most Lethal Sniper in U.S. Military Histor_B006LA6IW2.azw  An Ember in the Ashes_B00KWG5RSC.kfx  An Impossible Return_ A Novel_B09RK5PBHC.kfx  Anarchism and Other Essays_B0082YWFFY.kfx  Angular_ From Theory To Practice_ Build the web applications of tomorrow using the Angular web framewor_B01N9S0CZN.kfx  (+244 more)
CODE/HelloWorld/: .gitmodules  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  README.md  test_HelloWorld.cpp
CODE/HelloWorld/src/: hello_world.cpp
CODE/HelloWorld/tests/: test_hello_world.cpp
(+49 files in other folders)
